--- a/contact.html
+++ b/contact.html
@@ -1,62 +1,111 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
 <html lang="en-us">
 <head>
 <meta charset="UTF-8"></meta>
-<title>Contact William F. Kassebaum</title>	
-	<link rel="stylesheet" href="assets/css/reset.css">
-	<link rel="stylesheet" href="assets/css/style.css">
+<title>Contact Page for William F. Kassebaum</title>	
+
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="assets/css/reset.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    </style>
 </head>
 <body>
-<header id="mainHead">
-	<div class="container">
-		<a href="contact.html" id="mainLogo">Contact</a>
-			<nav>
-				<a href="index.html">About Me</a>
-				<a href="portfolio.html">Portfolio</a>
-				<a href="contact.html">Contact</a>
-			</nav>
-	</div>
-</header>
-<div id="main-container" class="contact">
-	<section class="main-section">
 
-		<h1>Contact</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container backGroundImg">
 
-		<form id="contact-form">
-			<ul>
-				<li>
-					<label form="name">Name</label>
-					<input type="text" name="name" id="txtName" placeholder="John Smith" required="required"></input>
-				</li>
-				<li>
-					<label form="email">Email</label>
-					<input type="text" name="email" id="txtEmail"  placeholder="example@gmail.com" required="required"></input>
-				</li>
-				<li>
-					<label form="message">Message</label>
-					<textarea name="message" id="txtAreaMssg"  required="required"></textarea>
-				</li>
-			</ul>
-					<input type="submit" value="Submit" name="submit"></input>
+        <a class="navbar-brand" href="#" >
+
+          <div class="subNavBrand" >
+           <h1> Contact</h1>
+          </div>
+            </a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+
+          <span class="navbar-text mr-auto"></span>
+
+                <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Content</a>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </nav>
+    <!-- PLACE THE REST OF THE CONTENT HERE -->
+    <div class="container-fluid">
+      <div class="row" id="firstRow">
+        <div class="col-sm-7 aboutMeBackground extCard">
+        		<h1 class="aboutMe">Contact</h1>
+        </div>
+        <div class="col-sm-5">
+            <div class="card">
+                <div class="card-header extCard">
+                  <h2>Connect with Me</h2>
+                </div>
+                <div class="card-body">
+          					<a href="https://github.com/wfkinnc" target="_blank" ><img src="assets/images/if_github2_252065.png" alt="Github" class="socialImg col-sm-3"></a>
+          					<a href="https://www.linkedin.com/in/william-kassebaum-5907232/" target="_blank" ><img src="assets/images/if_linkedin_1896062.png" alt="LinkedIn" class="socialImg col-sm-3"></a>
+          					<a href="https://stackoverflow.com/users/story/8465340" target="_blank" ><img src="assets/images/stackoverflowpx.png" alt="Stack Overflow" class="socialImg col-sm-3"></a>
 
 
-		</form>
 
-	</section>
+                  <!-- <p class="card-text">Sidebar Content.</p> -->
+                </div>
+              </div>
+            </div>
+        </div>
 
-	<section class="sidebar">
-		<h2>Connect with me</h2>
-				<a href="https://github.com/wfkinnc" target="_blank" ><img src="assets/images/if_github2_252065.png" alt="Github" class="socialImg"></a>
-			<a href="https://www.linkedin.com/in/william-kassebaum-5907232/" target="_blank" ><img src="assets/images/if_linkedin_1896062.png" alt="LinkedIn" class="socialImg"></a>
-			<a href="https://stackoverflow.com/users/story/8465340" target="_blank" ><img src="assets/images/stackoverflowpx.png" alt="Stack Overflow" class="socialImg"></a>
 
-	</section>
+ 
+
+        <div class="row " id="secondRow " style="padding: 0 0 20px 20px;">
+          <div class="col-sm-3 col-lg-3 aboutMeBackground "  >
+            <form>
+				  <div class="form-group">
+				    <label for="name1">Name</label>
+				    <input type="text" class="form-control" id="name1" aria-describedby="emailHelp" placeholder="John Smith">
+				  </div>
+				  <div class="form-group">
+				    <label for="email1">Email</label>
+				    <input type="email" class="form-control" id="email1" placeholder="example@gmail.com">
+				  </div>
+				  <div class="form-group">
+				    <label for="exampleFormControlTextarea1">Message</label>
+				    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+				  </div>
+				  <button type="submit" class="btn btn-primary">Submit</button>
+				</form>
+            </div>
+          </div>
+
+
+
+
 </div>
-
-<footer>
-	<div class="container">
-	© Copyright 2017 William F. Kassebaum
-	</div>
-</footer>
+     <div class="card-footer text-muted text-center testFooter">
+        © Copyright 2017 William F. Kassebaum
+     </div>
+     
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
