--- a/index.html
+++ b/index.html
@@ -7,40 +7,24 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-<style type="text/css">
-body {
-background-image: url("assets/images/concrete-texture/concrete-texture/concrete-texture.png");
-}
-.socialImg{
 
-		width:62px;
-	height:62px;
-	margin-top: 8px;
-	margin-right: 5px;
+  <link rel="stylesheet" href="assets/css/reset.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 
-}
-#firstRow{
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
-	background: green;
-	padding: 20px;
-}
-.tstClass{
-
-	background: blue;
-}
-.backGroundImg{
-
-
-}
-</style>
 </head>
 <body>
 
-       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container backGroundImg">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
 
-        <a class="navbar-brand" href="#">William F. Kassebaum</a>
+        <a class="navbar-brand" href="#" >
+
+          <div class="subNavBrand">
+            <h1>William F. Kassebaum</h1>
+          </div>
+            </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -65,39 +49,33 @@ background-image: url("assets/images/concrete-texture/concrete-texture/concrete-
 
       </div>
     </nav>
-
-
     <!-- PLACE THE REST OF THE CONTENT HERE -->
-    <div class="container">
+    <div class="container-fluid">
       <div class="row" id="firstRow">
-        <div class="col-sm-7">
-        		<h1 id="aboutMe">About Me</h1>
+        <div class="col-sm-8 aboutMeBackground extCard">
+        		<h1 class="aboutMe">About Me</h1>
         </div>
-        <div class="col-sm-5">
+        <div class="col-sm-4">
             <div class="card">
-                <div class="card-header">
-                  Connect with Me
+               <div class="card-header extCard">
+                 <h2> Connect with Me</h2>
                 </div>
-                <div class="card-body" style="padding: 0 20% 0 20%">
-					<a href="https://github.com/wfkinnc" target="_blank" ><img src="assets/images/if_github2_252065.png" alt="Github" class="socialImg"></a>
-						<a href="https://www.linkedin.com/in/william-kassebaum-5907232/" target="_blank" ><img src="assets/images/if_linkedin_1896062.png" alt="LinkedIn" class="socialImg"></a>
-						<a href="https://stackoverflow.com/users/story/8465340" target="_blank" ><img src="assets/images/stackoverflowpx.png" alt="Stack Overflow" class="socialImg"></a>
-
-
-
-                  <!-- <p class="card-text">Sidebar Content.</p> -->
+                <div class="card-body">
+                    <a href="https://github.com/wfkinnc" target="_blank" ><img src="assets/images/if_github2_252065.png" alt="Github" class="socialImg col-sm-3"></a>
+                    <a href="https://www.linkedin.com/in/william-kassebaum-5907232/" target="_blank" ><img src="assets/images/if_linkedin_1896062.png" alt="LinkedIn" class="socialImg col-sm-3"></a>
+                    <a href="https://stackoverflow.com/users/story/8465340" target="_blank" ><img src="assets/images/stackoverflowpx.png" alt="Stack Overflow" class="socialImg col-sm-3"></a>
                 </div>
               </div>
             </div>
         </div>
 
 
-        <div class="row">
-          <div class="col-sm-3 col-lx-3">
+        <div class="row" id="secondRow">
+          <div class="col-sm-3 col-lg-3 aboutMeBackground" >
           <img src="assets/images/wfk.JPG" class="img-thumbnail" alt="William">
           </div>
 
-          <div class="col-sm-6 col-lx-6">
+          <div class="col-sm-8 col-lg-8 aboutMeBackground" style="padding: 10px">
             <p>
 				I have been a Business Intelligence technologist for over 20 years, starting my IT career while working for NCNB in Greensboro NC. Previous to that, my educational background included a BS in Economics from Va Tech and my MBA from UNC-G. Other, not technical positions included Store Manager at a Domino's Pizza and later collections for banks in Va and NC.</p>
 			<p>	Since beginning my IT career with Information Builders in 1997, I have become proficient in their software, 		WebFOCUS.  As a consultant in their  Professional Services group, I have worked on projects large and small for all manner of organizations, business and government.  As a consultant, we were epected to also be proficient in rendering technologies including  HTML, CSS and javascript.</p>
@@ -108,47 +86,9 @@ background-image: url("assets/images/concrete-texture/concrete-texture/concrete-
         </div>
       </div>
 </div>
-    <div class="card-footer text-muted" style="bottom 0;">
-    2 days ago
-  </div>
-<!--
-
-<div id="main-container" class="contact">
-	<section class="main-section">
-		<h1>About Me</h1>
-		<img src="assets/images/wfk.JPG" class="auth-image" alt="William">
-			<p>        <div class="row">
-          <div class="col-sm-3 col-lx-3">
-            <img src="http://placehold.it/150x150" alt="Placeholder" class="img-thumbnail">
-          </div>
-
-          <div class="col-sm-9 col-lx-9">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim, felis ut dictum tristique, nibh erat feugiat libero, sit amet fringilla mauris velit in mi. Duis tempus felis vitae felis vulputate pretium. Nullam commodo, est ac auctor ornare,
-              eros nisi fringilla sem, non pulvinar tortor lorem sit amet sem. Aenean quis erat facilisis, porttitor ex cursus, luctus enim. Curabitur et metus in lacus tristique sagittis et in lorem. Nunc id nisi et neque fringilla ultricies. Aenean
-              at feugiat elit, a posuere justo. Pellentesque egestas dolor et nisi venenatis, nec fermentum urna fringilla. Etiam efficitur porta purus, id posuere sem congue a.
-            </p>
-          </div>
-        </div>
-					I have been a Business Intelligence technologist for over 20 years, starting my IT career while working for NCNB in Greensboro NC. Previous to that, my educational background included a BS in Economics from Va Tech and my MBA from UNC-G. Other, not technical positions included Store Manager at a Domino's Pizza and later collections for banks in Va and NC.<br><br>
-					Since beginning my IT career with Information Builders in 1997, I have become proficient in their software, WebFOCUS.  As a consultant in their  Professional Services group, I have worked on projects large and small for all manner of organizations, business and government.  As a consultant, we were epected to also be proficient in rendering technologies including  HTML, CSS and javascript.<br><br>
-					My prefernce, though, are back end technologies which cull data from throughout the organization and stage it for quick retrievals through Web enabled reporting solutions. A great number of my past experiences, starting with my first job at NCNB, revolved around the accumulation of data from disparate sources and putting them into a unified structure which enabled quick reporting. 
-			</p>
-	</section>
-
-	<section class="sidebar">
-		<h2>Connect with me</h2>
-			<a href="https://github.com/wfkinnc" target="_blank" ><img src="assets/images/if_github2_252065.png" alt="Github" class="socialImg"></a>
-			<a href="https://www.linkedin.com/in/william-kassebaum-5907232/" target="_blank" ><img src="assets/images/if_linkedin_1896062.png" alt="LinkedIn" class="socialImg"></a>
-			<a href="https://stackoverflow.com/users/story/8465340" target="_blank" ><img src="assets/images/stackoverflowpx.png" alt="Stack Overflow" class="socialImg"></a>
-	</section>
-</div>
--->
-<!-- <footer>
-	<div class="container">
-	© Copyright 2017 William F. Kassebaum
-	</div>
-</footer> -->
+     <div class="card-footer text-muted text-center" style="background: #666; border-top: 8px solid #4aaaa5;">
+		    © Copyright 2017 William F. Kassebaum
+     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
