Final Version for Submission..9/1/17 @ 11pm'

--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 <title>Informational Biography for William F. Kassebaum</title>	
 
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
-  <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/style.css">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -34,15 +33,15 @@
 
           <span class="navbar-text mr-auto"></span>
 
-                <ul class="navbar-nav">
+           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="index.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Content</a>
+              <a class="nav-link" href="contact.html">Content</a>
             </li>
           </ul>
         </div>
@@ -52,18 +51,18 @@
     <!-- PLACE THE REST OF THE CONTENT HERE -->
     <div class="container-fluid">
       <div class="row" id="firstRow">
-        <div class="col-sm-8 aboutMeBackground extCard">
+        <div class="col-sm-6 aboutMeBackground extCard">
         		<h1 class="aboutMe">About Me</h1>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-5">
             <div class="card">
                <div class="card-header extCard">
                  <h2> Connect with Me</h2>
                 </div>
-                <div class="card-body">
-                    <a href="https://github.com/wfkinnc" target="_blank" ><img src="assets/images/if_github2_252065.png" alt="Github" class="socialImg col-sm-3"></a>
-                    <a href="https://www.linkedin.com/in/william-kassebaum-5907232/" target="_blank" ><img src="assets/images/if_linkedin_1896062.png" alt="LinkedIn" class="socialImg col-sm-3"></a>
-                    <a href="https://stackoverflow.com/users/story/8465340" target="_blank" ><img src="assets/images/stackoverflowpx.png" alt="Stack Overflow" class="socialImg col-sm-3"></a>
+               <div class="card-body">
+                    <a href="https://github.com/wfkinnc" target="_blank" ><img src="assets/images/if_github2_252065.png" alt="Github" class="img-fluid" style="max-width: 100%; height: auto;"></a>
+                    <a href="https://www.linkedin.com/in/william-kassebaum-5907232/" target="_blank" ><img src="assets/images/if_linkedin_1896062.png" alt="LinkedIn" class="img-fluid" style="max-width: 100%; height: auto;"></a>
+                    <a href="https://stackoverflow.com/users/story/8465340" target="_blank" ><img src="assets/images/stackoverflowpx.png" alt="Stack Overflow" class="img-fluid" style="max-width: 100%; height: auto;"></a>
                 </div>
               </div>
             </div>
@@ -77,9 +76,9 @@
 
           <div class="col-sm-8 col-lg-8 aboutMeBackground" style="padding: 10px">
             <p>
-				I have been a Business Intelligence technologist for over 20 years, starting my IT career while working for NCNB in Greensboro NC. Previous to that, my educational background included a BS in Economics from Va Tech and my MBA from UNC-G. Other, not technical positions included Store Manager at a Domino's Pizza and later collections for banks in Va and NC.</p>
-			<p>	Since beginning my IT career with Information Builders in 1997, I have become proficient in their software, 		WebFOCUS.  As a consultant in their  Professional Services group, I have worked on projects large and small for all manner of organizations, business and government.  As a consultant, we were epected to also be proficient in rendering technologies including  HTML, CSS and javascript.</p>
-			<p>	My prefernce, though, are back end technologies which cull data from throughout the organization and stage it for quick retrievals through Web enabled reporting solutions. A great number of my past experiences, starting with my first job at NCNB, revolved around the accumulation of data from disparate sources and putting them into a unified structure which enabled quick reporting.</p>
+        				I have been a Business Intelligence technologist for over 20 years, starting my IT career while working for NCNB in Greensboro NC. Previous to that, my educational background included a BS in Economics from Va Tech and my MBA from UNC-G. Other, not technical positions included Store Manager at a Domino's Pizza and later collections for banks in Va and NC.</p>
+        			<p>	Since beginning my IT career with Information Builders in 1997, I have become proficient in their software, 		WebFOCUS.  As a consultant in their  Professional Services group, I have worked on projects large and small for all manner of organizations, business and government.  As a consultant, we were epected to also be proficient in rendering technologies including  HTML, CSS and javascript.</p>
+        			<p>	My prefernce, though, are back end technologies which cull data from throughout the organization and stage it for quick retrievals through Web enabled reporting solutions. A great number of my past experiences, starting with my first job at NCNB, revolved around the accumulation of data from disparate sources and putting them into a unified structure which enabled quick reporting.</p>
           </div>
         </div>
 
