--- a/contact.html
+++ b/contact.html
@@ -2,13 +2,9 @@
 <html lang="en-us">
 <head>
 <meta charset="UTF-8"></meta>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>Contact Page for William F. Kassebaum</title>	
-
-
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/style.css">
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     </style>
 </head>
@@ -32,15 +28,15 @@
 
           <span class="navbar-text mr-auto"></span>
 
-                <ul class="navbar-nav">
+           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="index.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Content</a>
+              <a class="nav-link" href="contact.html">Content</a>
             </li>
           </ul>
         </div>
@@ -50,7 +46,7 @@
     <!-- PLACE THE REST OF THE CONTENT HERE -->
     <div class="container-fluid">
       <div class="row" id="firstRow">
-        <div class="col-sm-7 aboutMeBackground extCard">
+        <div class="col-sm-6 aboutMeBackground extCard">
         		<h1 class="aboutMe">Contact</h1>
         </div>
         <div class="col-sm-5">
@@ -59,13 +55,9 @@
                   <h2>Connect with Me</h2>
                 </div>
                 <div class="card-body">
-          					<a href="https://github.com/wfkinnc" target="_blank" ><img src="assets/images/if_github2_252065.png" alt="Github" class="socialImg col-sm-3"></a>
-          					<a href="https://www.linkedin.com/in/william-kassebaum-5907232/" target="_blank" ><img src="assets/images/if_linkedin_1896062.png" alt="LinkedIn" class="socialImg col-sm-3"></a>
-          					<a href="https://stackoverflow.com/users/story/8465340" target="_blank" ><img src="assets/images/stackoverflowpx.png" alt="Stack Overflow" class="socialImg col-sm-3"></a>
-
-
-
-                  <!-- <p class="card-text">Sidebar Content.</p> -->
+                    <a href="https://github.com/wfkinnc" target="_blank" ><img src="assets/images/if_github2_252065.png" alt="Github" class="img-fluid" style="max-width: 100%; height: auto;"></a>
+                    <a href="https://www.linkedin.com/in/william-kassebaum-5907232/" target="_blank" ><img src="assets/images/if_linkedin_1896062.png" alt="LinkedIn" class="img-fluid" style="max-width: 100%; height: auto;"></a>
+                    <a href="https://stackoverflow.com/users/story/8465340" target="_blank" ><img src="assets/images/stackoverflowpx.png" alt="Stack Overflow" class="img-fluid" style="max-width: 100%; height: auto;"></a>
                 </div>
               </div>
             </div>
