--- a/portfolio.html
+++ b/portfolio.html
@@ -2,13 +2,10 @@
 <html lang="en-us">
 <head>
 <meta charset="UTF-8"></meta>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>Portfolio Page for William F. Kassebaum</title>	
-
-
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<!-- <!  <link rel="stylesheet" href="assets/css/reset.css"> -->
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/style.css">
     </style>
 </head>
 <body>
@@ -31,15 +28,15 @@
 
           <span class="navbar-text mr-auto"></span>
 
-                <ul class="navbar-nav">
+           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="index.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Content</a>
+              <a class="nav-link" href="contact.html">Content</a>
             </li>
           </ul>
         </div>
@@ -48,9 +45,9 @@
     </nav>
     <!-- PLACE THE REST OF THE CONTENT HERE -->
     <div class="container-fluid">
-      <div class="row" id="firstRow">
-        <div class="col-sm-7 aboutMeBackground extCard">
-        		<h1 class="aboutMe">About Me</h1>
+       <div class="row" id="firstRow">
+        <div class="col-sm-6 aboutMeBackground extCard">
+        		<h1 class="aboutMe">Portfolio</h1>
         </div>
         <div class="col-sm-5">
             <div class="card">
@@ -58,22 +55,16 @@
                  <h2> Connect with Me</h2>
                 </div>
                 <div class="card-body">
-          					<a href="https://github.com/wfkinnc" target="_blank" ><img src="assets/images/if_github2_252065.png" alt="Github" class="socialImg col-sm-3"></a>
-          					<a href="https://www.linkedin.com/in/william-kassebaum-5907232/" target="_blank" ><img src="assets/images/if_linkedin_1896062.png" alt="LinkedIn" class="socialImg col-sm-3"></a>
-          					<a href="https://stackoverflow.com/users/story/8465340" target="_blank" ><img src="assets/images/stackoverflowpx.png" alt="Stack Overflow" class="socialImg col-sm-3"></a>
-
-
-
-                  <!-- <p class="card-text">Sidebar Content.</p> -->
+                    <a href="https://github.com/wfkinnc" target="_blank" ><img src="assets/images/if_github2_252065.png" alt="Github" class="img-fluid" style="max-width: 100%; height: auto;"></a>
+                    <a href="https://www.linkedin.com/in/william-kassebaum-5907232/" target="_blank" ><img src="assets/images/if_linkedin_1896062.png" alt="LinkedIn" class="img-fluid" style="max-width: 100%; height: auto;"></a>
+                    <a href="https://stackoverflow.com/users/story/8465340" target="_blank" ><img src="assets/images/stackoverflowpx.png" alt="Stack Overflow" class="img-fluid" style="max-width: 100%; height: auto;"></a>
                 </div>
               </div>
             </div>
         </div>
 
-
- 
-
         <div class="row " id="secondRow">
+  
           <div class="col-sm-3 col-lg-3 aboutMeBackground " >
             <div class="work">
               <img src="assets/images/Rugby-Union-ball.jpg" alt="rugby" class="auth-image">
@@ -87,6 +78,7 @@
                 <h3>Volvo P1800</h3>
               </div>
           </div>
+        
         </div>
 
         <div class="row" id="thirdRow">
@@ -105,21 +97,15 @@
           </div>
         </div>
 
-               <div class="row" id="forthRow">
+        <div class="row" id="forthRow">
           <div class="col-sm-3 col-lg-6 aboutMeBackground" >
               <div class="work">
-
                   <img src="assets/images/balance.JPG" alt="bar tricks" class="auth-image">
                   <h3>Stupid Bar Tricks</h3>
-
-
               </div>
           </div>
         </div>
-
-
-
-</div>
+    </div>
      <div class="card-footer text-muted text-center testFooter" >
         © Copyright 2017 William F. Kassebaum
      </div>
